# 06-crm

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  _typos.toml  cliff.toml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs  metadata.yml
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs  send.yml
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm-send/tests/: service.rs
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: auth.rs  crm.rs  mod.rs
crm/src/pb/: crm.rs
fixtures/: cert.pem  key.pem  nginx.conf  rootCA.pem  token
protos/crm/: messages.proto  rpc.proto
protos/metadata/: messages.proto
protos/notification/: messages.proto  rpc.proto
protos/user-stats/: messages.proto  rpc.proto
user-stat/: Cargo.toml  README.md  build.rs  user_stat.yml
user-stat/examples/: gen.rs
user-stat/fixtures/: test.sql
user-stat/migrations/: 20240628122808_init.sql  20240629021909_index.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
