[workspace]
members = ["crm", "crm-metadata", "crm-send", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
prost = "0.12.6"
prost-build = "0.12.6"
prost-types = "0.12.6"
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "rt", "macros"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
proto-builder-trait = "0.6.1"
derive_builder = "0.20.0"
futures = "0.3.30"
serde_yaml = "0.9.34"
itertools = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# fake数据, 用于模拟
fake = { version = "2.9.2", features = ["derive", "chrono"] }
rand = "0.8.5"
