[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test_utils = [
    "fake",
    "nanoid"
]

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

sqlx = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
serde_yaml = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
uuid = { version = "1.9.1", features = ["v4"] }

fake = { version = "2.9.2", features = ["derive", "chrono"], optional = true  }
nanoid = { version = "0.4.0", optional = true }

[dev-dependencies]
crm-send = { workspace = true, features = ["test_utils"] }
rand = "0.8.5"

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
