[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test_utils = ["sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

sqlx = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
serde_yaml = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sqlx-db-tester = { workspace = true, optional = true }


[dev-dependencies]
fake = { workspace = true }
nanoid = "0.4.0"
rand = { workspace = true }
user-stat = { workspace = true, features = ["test_utils"] }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
